--- a/Wolf Slider/index.html
+++ b/Wolf Slider/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Wolf Sliderss
+   -->
     <div id="slider"></div>
-    <div id="overlay"></div> 
+    <div id="overlay"></div>
   </body>
 </html>
 
