--- a/Wolf Slider/index.html
+++ b/Wolf Slider/index.html
@@ -1,4 +1,4 @@
-as<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,7 +6,7 @@ as<!DOCTYPE html>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Wolf Sliderss
+    <!-- Wolf Slidersss
    -->
     <div id="slider"></div>
     <div id="overlay"></div>
