"Click input point"

--- a/Wolf Slider/index.html
+++ b/Wolf Slider/index.html
@@ -5,11 +5,13 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body id="hero">
     <!-- Wolf Slidersss
    -->
     <div id="slider"></div>
     <div id="overlay"></div>
+    <script type="text/javascript" src="app.js">
+
+    </script>
   </body>
 </html>
-
